tests/errors/sem_hw5_typeck_builtin.kt
fun main() {
    var j : Int = 9;
 //   let mut s : String;
 //   s = "hello"; // .to_string();
 //   j = s.len();
 //   j = dict()
    println("hello", 1);
}
// Test Output:[expect type error on line 7]